fix:修复内存查询bug,增加语言安全